--- a/client/src/components/login/login.css
+++ b/client/src/components/login/login.css
@@ -101,6 +101,9 @@ label {
   display: block;
   margin: 0;
 }
+.error {
+	color: red
+}
 
 /*---------------------------------------------*/
 button {
@@ -129,10 +132,6 @@ iframe {
 /*//////////////////////////////////////////////////////////////////
 [ login ]*/
 
-.limiter {
-  width: 100%;
-  margin: 0 auto;
-}
 
 .container-login100 {
   width: 100%;
