--- a/client/src/containers/login/components/login.css
+++ b/client/src/containers/login/components/login.css
@@ -368,7 +368,7 @@ input.input100 {
   padding: 0 20px;
   min-width: 160px;
   height: 50px;
-  background-color: #dab3ff;
+  background-color: blue;
   border-radius: 25px;
 
 
@@ -383,7 +383,7 @@ input.input100 {
 }
 
 .login100-form-btn:hover {
-  background-color: 	#9932CC;
+  background-color: 	darkblue;
 }
 
 
