--- a/client/src/components/error/error.css
+++ b/client/src/components/error/error.css
@@ -15,6 +15,13 @@
    top: 8px;
    right: 16px;
 }
+.go-back {
+   top: 90px;
+   right: 16px;
+   background-color: black;
+   color: white;
+   font-size: 25px
+}
 .errorBottom {
   position: absolute;
   top:50px;
